fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  margin-top: 30px;
+  /*margin-top: 30px;*/
   position: relative;
   margin: 0;
   padding-bottom: 6rem;
@@ -97,8 +97,26 @@ h4 {
   font-size: 12pt;
   margin-left: 35px;
   margin-right: 35px;
-  margin-top: 60px;
+  /*margin-bottom: 50px;*/
   font-weight: lighter;
+}
+
+h4 a {
+  text-decoration: none !important;
+  border: none !important;
+  font-size: 12pt !important;
+}
+
+h4 a:hover {
+  color: #ced8de;;
+}
+
+h4 a:visited {
+  color: #5e7d93;
+}
+
+h4 a:visited:hover {
+  color: #ced8de;
 }
 
 /* Body text for search results */
@@ -247,4 +265,9 @@ h5 {
 .search-button {
   margin-top: 0px;
   float: right;
+}
+
+.layout {
+  position: relative;
+  top: 48px;
 }
